FormEditor auf NB801 aktualisiert.